fixing the fixes, had to leave that ugly gray border on the footer when the page its in english because otherwise it would break the spanish and the portuguese formats

--- a/style.css
+++ b/style.css
@@ -339,10 +339,14 @@ p {
     padding-left: 2em;
     margin-top: 0;
   }
+  
+  .educationContent li {
+    padding: 2.3em;
+  }
 
   .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 
   .grid-container {
